fix(mathjax): fix alignment

--- a/source/css/common/markdown.styl
+++ b/source/css/common/markdown.styl
@@ -223,7 +223,7 @@
 
   mjx-container
     display inline-block
-    vertical-align middle
+    //vertical-align middle
 
   mjx-container[display="true"]
     display flex !important
